--- a/index.html
+++ b/index.html
@@ -4,26 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 1. Name your web page -->
-    <title></title>
+    <title>Portfolio</title>
 
     <!-- 7. Import Stylesheet -->
-
+`   <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
     <!-- 2. Name and Info -->
     <header>
+        <h1/h1>Hamza Khan</h1>
+        <h2/h2>Student at UOFG</h2>
+        <p>I am 18 Years Old</p>
+        <p>Guelph, ON</p>
+        <p>Khan@gmail.com</p>
 
     </header>
 
     <!-- 3. About Me -->
-    <section>
+    <section class = "about">
         <!-- 3a. The About Me Section -->
+         <div class= "aboutme">
+            <h2/h2>About Me</h2>
+            <p>My Name is Hamza I am a member of GDSC, I love the web and I am pursing a CENG Degree</p>
+
+
+         </div>
 
 
         <!-- 4. Add a Picture -->
         <div>
+
+`       <img src = "images/photo.png" style="width: 200px" class="mypicture"/>
 
         </div>
     </section>
@@ -33,9 +46,27 @@
     <section class="projects">
         <div>
             <!-- 5a. Add project title -->
-            <h4></h4>
+            <h4><a href ="https://github.com/Hamza102006/GDSC">Portfolio Project</a></h4>
 
             <!-- 5b. Add project description -->
+             <ul>
+                <li>Learned about HTML</li>
+                <li>Also Learned About VS CODE</li>
+
+             </ul>
+
+
+        </div>
+        <div>
+            <!-- 5a. Add project title -->
+            <h4><a href ="https://github.com/Hamza102006/GDSC">Calculator</a></h4>
+
+            <!-- 5b. Add project description -->
+             <ul>
+                <li>Addtion</li>
+                <li>Subtraction</li>
+
+             </ul>
 
 
         </div>
@@ -46,6 +77,7 @@
         <h2>Connect With Me!</h2>
         <!-- 6a. Make a button -->
         <!-- 6b. Make it redirectable -->
+         <a href = "https://www.linkedin.com/in/hamza-khan-813107238/" target="_blank"><button>LinkedIN</button><a>
 
     </footer>
 </body>
